<resources>
    <string name="app_name">iNGAGE</string>

    <!-- 107.170.232.60 - public
         138.197.200.53 - private    -->

    <string name="ip">107.170.232.60</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="show_eula">showEULA</string>
    <string name="title_eula">End User License Agreement</string>

    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_trending">Trending</string>
    <string name="action_search">Search</string>

    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="sign_up_new_account">New member? Click here to create an account!</string>
    <string name="forgot_password">Forgot User ID or Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="saved_user">saved_user</string>
    <string name="remember_user_checked">remember_user_checked</string>

    <string name="add_button_text">SUBMIT</string>
    <string name="discard_button_text">DISCARD</string>

    <!--Strings related to user preferences-->
    <string name="user_id_cache">userID</string>
    <string name="user_pass_cache">userPass</string>
    <string name="user_permision_request">Please allow access to use this feature</string>

    <!--Strings related to navigation bar-->
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="button_text_sign_out">SIGN OUT</string>

    <!-- Strings related to Post display-->
    <string name="action_refresh">Refresh</string>
    <string name="no_rooms_message">No rooms available. Try creating one now!</string>

    <!--Strings related to posting thread-->
    <string name="post_description_hint">Enter description here</string>
    <string name="post_photo_hint">Note: Threads with images are more likely to receive comments!</string>
    <string name="post_thread_error">Can\'t submit post. Please remove any special characters and try again.</string>

    <!--related to comments-->
    <string name="pick_side">Do you agree or disagree with the argument?</string>
    <string name="comment_hint">Comment</string>
    <string name="side_prompt">Pick a side</string>
    <string-array name="sides">
        <item>Agree</item>
        <item>Disagree</item>
    </string-array>
    <string name="no_activity_message">No activity yet. Start joining discussions and posting comments to get started!</string>

    <!--related to thread category-->
    <string name="category_prompt">Pick a category</string>
    <string name="category_all">All</string>
    <string name="category_header">Popular</string>
    <string name="category_default">Select a Category</string>
    <string-array name="thread_categories">
        <item>Select a Category</item>
        <item>Anime</item>
        <item>Art</item>
        <item>Education</item>
        <item>Food</item>
        <item>Games</item>
        <item>Health</item>
        <item>Movies</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Politics</item>
        <item>Random</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>TV shows</item>
    </string-array>

    <string name="c_politics">Politics</string>
    <string name="c_music">Music</string>
    <string name="c_ovies">Movies</string>
    <string name="c_art">Art</string>
    <string name="c_sports">Sports</string>
    <string name="c_games">Games</string>
    <string name="c_philosophy">Philosophy</string>
    <string name="c_technology">Technology</string>
    <string name="title_activity_chat">ChatActivity</string>

    <!--related to walkthrouhgh-->
    <string name="walkthough_skip">Skip</string>
    <string name="walkthough_done">Got it!</string>
    <string name="is_first_launch">isFirstLaunch</string>

    <string-array name="walkthrough_headers">
        <item>Get Started!</item>
        <item>How it Works</item>
        <item>Start your own discussion!</item>
        <item>Spectate</item>
        <item>Choose from many Topics!</item>
    </string-array>

    <string-array name="walkthrough_descriptions">
        <item>Click on any room in the active tab to get started!

               Agree or disagree with the issue and start commenting.
        </item>

        <item>Rooms are open for a limited time once created.

              Once the timer is up, then it will be locked and archived. </item>
        <item>Have an idea on an interesting topic?

              Create your own room! Pick a category and even upload your own image for that room.</item>

        <item>Don\'t feel like participating?

              Click on the spectate icon in order to
              view the comments! </item>

        <item>Use the search bar to find the topics that you are interested in. Or tap on the categories tab to filter by type.</item>
    </string-array>

    <!-- Contact us -->
    <string name="support_email">ingageprototype@gmail.com</string>
    <string name="email_btn_text">Email Us</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="contact_us_text">Got any questions, comments, or suggestions? Send us an email!
        We appreciate any feedback since it helps us improve our product for better user experience!</string>
    <string name="contact_us_sent">"Message has been sent! Thank you for contacting us!"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>

</resources>
