<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_refresh"
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_trending"
        android:orderInCategory="100"
        android:title="@string/action_trending"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />


</menu>
