<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ingage.ingage20.Login2Activity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        >
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_username"
        android:maxLines="1"
        android:background="@layout/textfield"
        android:paddingLeft="10dp"
        />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:hint="@string/prompt_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@layout/textfield"
            android:paddingLeft="10dp"
            />
        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            android:background="@layout/button"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/signIn_textView_CreateNewAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_new_account"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                />
            </LinearLayout>
    </LinearLayout>
</LinearLayout>
