<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PostThreadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:id="@+id/llHeader"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Create a New Thread"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ivIcon1"
                android:src="@android:drawable/ic_menu_myplaces" />

            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ivIcon2"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/llHeader"
        android:id="@+id/rlPage1"
        android:background="#F2F2F2">

        <EditText
            android:id="@+id/insert_thread_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@layout/textfield"
            android:hint="Title"
            android:inputType="textCapSentences"
            android:gravity="top"
            android:padding="8dp" />

        <EditText
            android:id="@+id/insert_thread_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/insert_thread_title_text_view"
            android:layout_alignStart="@+id/insert_thread_title_text_view"
            android:layout_below="@+id/insert_thread_title_text_view"
            android:layout_marginTop="24dp"
            android:background="@layout/textfield"
            android:gravity="top"
            android:hint="@string/post_description_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:maxLines="4"
            android:padding="8dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/insert_thread_content_text_view"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/category_default"
            android:textColor="@color/colorPrimaryLight"
            android:background="@layout/textfield"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@layout/button"
            android:text="Next"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/llHeader"
        android:id="@+id/rlPage2"
        android:background="#F2F2F2"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/post_photo_hint"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/uploadImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/llUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHint"
            android:background="@layout/textfield"
            android:orientation="vertical"
            android:layout_margin="32dp">

            <ImageView
                android:id="@+id/ivUploadIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:tint="@color/light_green"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@android:drawable/ic_menu_upload" />

            <TextView
                android:id="@+id/tvUploatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Upload Image"
                android:textColor="@color/gray"
                android:textSize="22dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@layout/button"
            android:text="Submit"
            android:textColor="@color/white"/>

    </RelativeLayout>
</RelativeLayout>
